Initial experimental version of MiEx v2.0.0