@@ -35,6 +35,7 @@ import java.io.BufferedReader;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 
 import com.google.gson.JsonArray;
@@ -45,15 +46,18 @@ import com.google.gson.stream.JsonReader;
 
 public class ReleaseChecker {
 	
-	public static final String CURRENT_VERSION = "v1.6.2";
+	public static final String CURRENT_VERSION = "v2.0.0.experimental-1";
 	public static String LATEST_VERSION = CURRENT_VERSION;
 	public static String LATEST_VERSION_URL = "https://github.com/BramStoutProductions/MiEx/releases";
 	
 	public static void checkRelease(){
+		if(MCWorldExporter.offlineMode)
+			return;
+		
 		HttpURLConnection connection = null;
 		InputStream stream = null;
 		try {
-			URL url = new URL("https://api.github.com/repos/BramStoutProductions/MiEx/releases");
+			URL url = new URI("https://api.github.com/repos/BramStoutProductions/MiEx/releases").toURL();
 			connection = (HttpURLConnection) url.openConnection();
 			stream = connection.getInputStream();
 			
@@ -70,7 +74,7 @@ public class ReleaseChecker {
 				}
 			}
 		}catch(Exception ex) {
-			ex.printStackTrace();
+			//ex.printStackTrace();
 		}
 		
 		try {
@@ -84,7 +88,62 @@ public class ReleaseChecker {
 	}
 	
 	public static boolean hasNewRelease() {
-		return !LATEST_VERSION.equalsIgnoreCase(CURRENT_VERSION);
+		long[] latestVersion = versionToNumbers(LATEST_VERSION);
+		long[] currentVersion = versionToNumbers(CURRENT_VERSION);
+		
+		int minCount = Math.min(latestVersion.length, currentVersion.length);
+		for(int i = 0; i < minCount; ++i) {
+			if(latestVersion[i] > currentVersion[i])
+				return true;
+			if(latestVersion[i] < currentVersion[i])
+				return false;
+		}
+		// If we've reached this part, then as far as minCount goes,
+		// they are the same numbers. So, the larger of the two numbers
+		// will be the one with additional size.
+		
+		// If true, they are the exact same number
+		if(latestVersion.length == currentVersion.length)
+			return false;
+		
+		// Example case: 
+		// latestVersion  = v2.0.0.experimental-1
+		// currentVersion = v2.0.0
+		// currentVersion needs to be seen as higher
+		if(latestVersion.length > currentVersion.length)
+			return false;
+		
+		// We have a new version available
+		return true;
+	}
+	
+	private static long[] versionToNumbers(String str) {
+		String[] tokens = str.toLowerCase().split("\\.");
+		long[] numbers = new long[tokens.length];
+		for(int i = 0; i < tokens.length; ++i) {
+			numbers[i] = versionTokenToNumber(tokens[i]);
+		}
+		return numbers;
+	}
+	
+	private static long versionTokenToNumber(String token) {
+		long res = 0;
+		long multiplier = 0;
+		for(int i = 0; i < token.length(); ++i) {
+			char c = token.charAt(i);
+			if(Character.isLetter(c)) {
+				long val = c - 'a';
+				res *= multiplier;
+				res += val;
+				multiplier = 26;
+			}else if(Character.isDigit(c)) {
+				long val = Character.digit(c, 10);
+				res *= multiplier;
+				res += val;
+				multiplier = 10;
+			}
+		}
+		return res;
 	}
 	
 }
